# sadi

./: .release.toml  BRANCHING.md  Cargo.toml  README.md  deny.toml
.github/workflows/: CI.yml  dispatch.yml
examples/async_example/: Cargo.toml
examples/async_example/src/: main.rs
examples/axum/: Cargo.toml  test.sh
examples/axum/src/: main.rs
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
examples/complex/: Cargo.toml
examples/complex/src/: lib.rs  main.rs
examples/complex/src/core/application/use_case/todo/: create.rs  delete.rs  get_all.rs  get_by_id.rs  mod.rs  update_status.rs
examples/complex/src/core/application/use_case/user/: create.rs  delete.rs  get_all.rs  get_by_id.rs  mod.rs
examples/complex/src/core/domain/todo/: entity.rs  repository.rs
examples/complex/src/core/domain/user/: entity.rs  repository.rs
examples/complex/src/infra/: mod.rs
examples/complex/src/infra/di/: mod.rs  repositories.rs  use_cases.rs
examples/complex/src/infra/persistence/sqlite/: client.rs  mod.rs
examples/complex/src/infra/persistence/sqlite/repository/: mod.rs  todo_sqlite.rs  user_sqlite.rs
roadmaps/: OBSERVABILITY.md  RESOURCE_LIMIT.md
sadi/: Cargo.toml  README.md
sadi/src/: async_container.rs  async_factory.rs  async_resolve_guard.rs  container.rs  error.rs  factory.rs  injector.rs  instance.rs  lib.rs  macros.rs  provider.rs  resolve_guard.rs  resource_limits.rs  sadi.rs  scope.rs  shared.rs  types.rs
sadi/tests/: resource_limits_integration.rs
src/: error.rs  lib.rs  sadi.rs
