[package]
name = "sadi"
keywords = ["dependency-injection", "di", "sadi", "semi-automatic", "axum-di"]
description = "Semi-Automatic Dependency Injector"
readme = "README.md"

version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license-file.workspace = true
authors.workspace = true

[dependencies]
tracing = { version = "0.1.41", optional = true }
tokio = { version = "1.35", features = ["sync", "macros", "rt-multi-thread"], optional = true }
lazy_static = { version = "1.4", optional = true }

[features]
default = ["thread-safe", "tracing"]

thread-safe = []
tracing = ["dep:tracing"]
async = ["dep:tokio", "dep:lazy_static"]
