[package]
name = "axum"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license-file.workspace = true
authors.workspace = true

[dependencies]
axum = "0.8"
complex = { path = "./../complex" }
sadi = { path = "../../sadi" }
serde = { version = "1.0.228", features = ["derive", "serde_derive"] }
serde_json = "1.0.149"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros", "sync"] }
tower = "0.5.1"
tower-http = { version = "0.5.0", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
